# tpp-code-counts

./: .gitignore  DEVELOPERS.md  README.md  justfile  project.yaml  pyproject.toml
analysis/: query-icd10-apcs.sql  query_icd10_apcs.sql  query_icd10_ons_deaths.sql  validate_output.py
reporting/: README.md  analyze_codelist_coverage.py  analyze_prefix_matching.py  common.py  create_emails_for_moved_code_repos.py  generate_consolidated_reports.py  missing_codes.py  swapped_codes.json
reporting/outputs/: .gitignore  moved_codes_report.md  prefix_matching_analysis.md  prefix_matching_report.md
tests/: mssql_test_helper.py  test_analyze_codelist_coverage.py  test_analyze_prefix_matching.py  test_analyze_prefix_matching_extended.py  test_common.py  test_create_emails_for_moved_code_repos.py  test_generate_consolidated_reports.py  test_generate_consolidated_reports_extended.py  test_missing_codes.py  test_missing_codes_extended.py  test_query_apcs.py  test_query_ons_deaths.py
