[project]
name = "tpp-code-counts"
version = "0.1.0"
description = "SQL queries for counting ICD10 codes from TPP data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "coverage>=7.10.6",
    "docker>=7.0.0",
    "pre-commit>=4.3.0",
    "pymssql>=2.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
]

# Note: any `exclude-newer-package` timestamps should be removed if > 7 days old
# See https://github.com/opensafely-core/repo-template/blob/main/DEVELOPERS.md
# for details
[tool.uv]
required-version = ">=0.9"
exclude-newer = "2025-11-21T00:00:00Z"
exclude-newer-package = {}

[tool.coverage.run]
branch = true
dynamic_context = "test_function"
omit = [
    ".venv/*",
]

[tool.coverage.report]
skip_covered = true
show_missing = true

[tool.coverage.html]
show_contexts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
exclude = [
    ".direnv",
    ".git",
    ".github",
    ".ipynb_checkpoints",
    ".pytest_cache",
    ".venv",
    "__pycache__",
    "docker",
    "htmlcov",
    "venv",
]

[tool.ruff.lint]
extend-select = [
    "A",   # flake8-builtins
    "I",   # isort
    "INP", # flake8-no-pep420
    "ISC", # flake8-implicit-str-concat
    "UP",  # pyupgrade
    "W",   # pycodestyle warning
]
extend-ignore = [
    "E501",
    "E731",
]

[tool.ruff.lint.isort]
lines-after-imports = 2
